# knerf

./: 404.html  AGENTS.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: pages.yml  pytest.yaml
CHANGELOG/: index.html
api/reference/: index.html
docs/: index.md
docs/api/: reference.md
knerf/_src/: rff.py  siren.py
knerf/_src/encoders/: __init__.py
search/: search_index.json
src/knerf/_src/encoders/: scale.py  trig.py
src/knerf/_src/encoders/spatial/: spherical.py
src/knerf/_src/layers/: rff.py  siren.py
tests/: test_knerf.py
